--- a/SASS/footer.scss
+++ b/SASS/footer.scss
@@ -11,8 +11,8 @@
 
 .wrap-6 {background: #333; margin-top: 50px;}
 .wrap-6 .copyright{padding: 9px 0;}
-.wrap-6 .copyright .p1{font: 400 13px var(--ff); color: #999;}
-.wrap-6 .copyright .p2{font: 400 13px/20px var(--ff); color: #777;}
+.wrap-6 .copyright .p1{font: 400 13px var(--ff); color: #d0cccc;}
+.wrap-6 .copyright .p2{font: 400 13px/20px var(--ff); color: #d0cccc;}
 .wrap-6 .p2 span{margin-left: 36px;}
 
 @media screen and (max-width:1220px){
