--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -79,7 +79,7 @@ body{
 .wrap-2 .dropdown li a{color: #969696; font: 14px/30px var(--ff); padding: 0 1rem 0 0; margin: 2px;}
 .wrap-2 .r0{right: 0;}
 
-.wrap-3 {background: url(../Images/bg3.png) no-repeat center/cover, #333333;position: relative; z-index: 0;}
+.wrap-3 {background: url(../Images/bg3.webp) no-repeat center/cover, #333333;position: relative; z-index: 0;}
 .wrap-3::before{
     content: '';
     position: absolute;
