--- a/SASS/index.css
+++ b/SASS/index.css
@@ -297,14 +297,14 @@ body {
 }
 
 .wrap-1 .left, select {
-  color: #777;
+  color: #d0cccc;
   font-size: 13px;
   font-family: var(--ff);
 }
 
 .wrap-1 li a {
   display: block;
-  color: #8b8b8b;
+  color: #d0cccc;
   font-size: 13px;
   font-family: var(--ff);
   padding: 17px 10px;
@@ -324,7 +324,7 @@ body {
 }
 
 .wrap-1 #carts {
-  background: #00c8c8;
+  background: #18c8c8;
   color: #fff;
 }
 
@@ -335,6 +335,11 @@ body {
 
 .wrap-1 .cart select {
   font-size: 13px;
+}
+
+.wrap-1 label {
+  font: 300 14px/30px var(--ff);
+  color: #d0cccc;
 }
 
 .wrap-2 .container-lg {
@@ -627,12 +632,12 @@ body {
 
 .wrap-6 .copyright .p1 {
   font: 400 13px var(--ff);
-  color: #999;
+  color: #d0cccc;
 }
 
 .wrap-6 .copyright .p2 {
   font: 400 13px/20px var(--ff);
-  color: #777;
+  color: #d0cccc;
 }
 
 .wrap-6 .p2 span {
@@ -693,7 +698,7 @@ body {
   }
 }
 .wrap-2 .container-lg {
-  background: url(../Images/background.png) no-repeat #f8f8f8;
+  background: url(../Images/background.webp) no-repeat #f8f8f8;
 }
 
 .wrap-2 .text {
@@ -925,7 +930,7 @@ body {
 @media screen and (max-width: 767px) {
   .wrap-2 .container-lg {
     padding: 10px 1rem;
-    background: url(../Images/background.png) no-repeat center/cover #f8f8f8;
+    background: url(../Images/background.webp) no-repeat center/cover #f8f8f8;
   }
   .wrap-2 .text p {
     font: bold 230px var(--ff);
